respuesta de gemini basada en el modelo predictivo